# XVEngine

./: .clang-format-ignore  .gitmodules  CMakeLists.txt  compile_commands.json
cmake/: shaders.cmake
shaders/: simple_shader.vert
source/: config.h  config.h.in  logger.cpp  logger.hpp  main.cpp  xve_app.cpp  xve_app.hpp  xve_device.cpp  xve_device.hpp  xve_model.cpp  xve_model.hpp  xve_pipeline.cpp  xve_pipeline.hpp  xve_swap_chain.cpp  xve_swap_chain.hpp  xve_window.cpp  xve_window.hpp
